k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argodemo
  labels:
    argocd.argoproj.io/managed-by: argocd
