k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argodemo
  namespace: argodemo
  labels:
    app: argodemo
spec:
  selector:
    app: argodemo
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
