k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argodemo
  namespace: argodemo
  labels:
    app: argodemo
spec:
  # Change this hostname to match your OCP cluster's wildcard domain,
  # e.g. argodemo.apps.<cluster-name>.<base-domain>
  host: argodemo.apps.example.com
  to:
    kind: Service
    name: argodemo
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
